[gd_scene load_steps=2 format=3 uid="uid://4x4urfdxnobk"]

[ext_resource type="Script" uid="uid://bjcgd1kii72so" path="res://diapositivas/components/VectorController.gd" id="1_vector_controller"]

[node name="VectorController" type="HBoxContainer"]
theme_override_constants/separation = 10
script = ExtResource("1_vector_controller")

[node name="VectorLabel" type="Label" parent="."]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "v ="

[node name="OpenParen" type="Label" parent="."]
layout_mode = 2
text = "( x ="

[node name="XSpinBox" type="SpinBox" parent="."]
layout_mode = 2
min_value = -10.0
max_value = 10.0
step = 0.1
alignment = 1

[node name="Comma" type="Label" parent="."]
layout_mode = 2
text = ", y ="

[node name="YSpinBox" type="SpinBox" parent="."]
layout_mode = 2
min_value = -10.0
max_value = 10.0
step = 0.1
alignment = 1

[node name="CloseParen" type="Label" parent="."]
layout_mode = 2
text = ")"
